--- a/slick-greeter.conf
+++ b/slick-greeter.conf
@@ -5,4 +5,4 @@ icon-theme-name=Papirus-Dark
 theme-name=Arc-Dark
 clock-format=%I:%M %p
 show-clock=true
-background=/usr/share/backgrounds/wallpapersden.com_sparkling-blue-and-purple-galaxy_1920x1080.jpg
+background=/usr/share/backgrounds/purplegalaxy.jpg
